--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+body { 
+  font-family: 'Ubuntu', sans-serif;
+  margin: 0;
+  font-size: 16pt;
+}
+
+.basic-container {
+  padding: 30px;
+}
+
+.version-info {
+  font-size: 8pt;
+  float: right;
+}
